--- a/index.html
+++ b/index.html
@@ -115,15 +115,6 @@
       box-shadow: 0 0 20px #00ff88;
     }
 
-    img {
-      width: 200px;
-      border-radius: 10px;
-      display: block;
-      margin: 20px auto;
-      border: 2px solid #00ff88;
-      box-shadow: 0 0 12px #00ff88;
-    }
-
     footer {
       background: #111;
       padding: 20px;
@@ -171,6 +162,21 @@
   background: #00ccaa;
 }
     
+body {
+ background-color: #0d0d0d;
+      color: #ffffff;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 50px;
+    }
+ img {
+      border: 3px solid #00ffcc;
+      border-radius: 12px;
+      max-width: 80%;
+      height: auto;
+      box-shadow: 0 0 20px #00ffcc;
+    }
+    
   </style>
 </head>
 <body>
@@ -179,7 +185,7 @@
     <h1>Rishabh Kumar Yadav</h1>
     <p class="typewriter">|| Futur AI Developer Let's move ||</p>
   </header>
-
+<img src="
   <section id="about">
     <h2>About Me</h2>
     <p>
