--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
   background: #00ccaa;
 }
     
-body {
+{
  background-color: #0d0d0d;
       color: #ffffff;
       font-family: Arial, sans-serif;
@@ -185,7 +185,7 @@ body {
     <h1>Rishabh Kumar Yadav</h1>
     <p class="typewriter">|| Futur AI Developer Let's move ||</p>
   </header>
-<img src="
+<img src="R/image.jpg"
   <section id="about">
     <h2>About Me</h2>
     <p>
