--- a/index.html
+++ b/index.html
@@ -162,20 +162,6 @@
   background: #00ccaa;
 }
     
-{
- background-color: #0d0d0d;
-      color: #ffffff;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 50px;
-    }
- img {
-      border: 3px solid #00ffcc;
-      border-radius: 12px;
-      max-width: 80%;
-      height: auto;
-      box-shadow: 0 0 20px #00ffcc;
-    }
     
   </style>
 </head>
@@ -185,7 +171,7 @@
     <h1>Rishabh Kumar Yadav</h1>
     <p class="typewriter">|| Futur AI Developer Let's move ||</p>
   </header>
-<img src="R/image.jpg"
+<img src="image.jpg"
   <section id="about">
     <h2>About Me</h2>
     <p>
