--- a/index.html
+++ b/index.html
@@ -170,8 +170,11 @@
   <header>
     <h1>Rishabh Kumar Yadav</h1>
     <p class="typewriter">|| Futur AI Developer Let's move ||</p>
-  </header>
-<img src="image.jpg"
+  </header><div style="background-color: #1a1a1a; border-radius: 16px; padding: 20px; width: 80%; margin: auto; box-shadow: 0 0 25px #00ffee;">
+  <h2 style="color: #00ffee;">Rishabh</h2>
+  <img src="image.jpg" alt="Rishabh" style="width: 100%; border-radius: 12px; box-shadow: 0 0 15px #00ffee;">
+</div>
+
   <section id="about">
     <h2>About Me</h2>
     <p>
