--- a/index.html
+++ b/index.html
@@ -170,19 +170,22 @@
   <header>
     <h1>Rishabh Kumar Yadav</h1>
     <p class="typewriter">|| Futur AI Developer Let's move ||</p>
-  </header><div style="background-color: #1a1a1a; border-radius: 16px; padding: 20px; width: 80%; margin: auto; box-shadow: 0 0 25px #00ffee;">
-  <h2 style="color: #00ffee;">Rishabh</h2>
-  <img src="image.jpg" alt="Rishabh" style="width: 100%; border-radius: 12px; box-shadow: 0 0 15px #00ffee;">
-</div>
+  </header>
 
-  <section id="about">
+  <div style="max-width: 500px; margin: auto; padding: 10px; background-color: #111; border-radius: 16px; box-shadow: 0 0 20px #00ffee;">
+  <img src="R/your-image.jpg" alt="Rishabh" style="width: 100%; height: auto; border-radius: 12px;">
+  <p style="text-align: center; color: #00ffee; margin-top: 10px;">Rishabh The Riper</p>
+</div>
+  
+  
+<section id="about">
     <h2>About Me</h2>
     <p>
       I'm Rishabh, a future AI engineer. With strong roots in Kali Linux, OSINT, and smart tech like Jarvis, I'm on a mission to build, break, and rebuild. Curiosity fuels me, code defines me, and cyber is my playground.
     </p>
-  </section>
+</section>
 
-  <section id="skills">
+<section id="skills">
     <h2>I'm Developing Skills In</h2>
     <ul>
       <li>Python, JavaScript (Core)</li>
@@ -191,7 +194,7 @@
       <li>Phishing Tools, OSINT Recon</li>
       <li>AI Tools, Machine Learning (Basics)</li>
     </ul>
-  </section>
+ </section>
 
   <section id="projects">
     <h2>Projects</h2>
