--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   </header>
 
   <div style="max-width: 500px; margin: auto; padding: 10px; background-color: #111; border-radius: 16px; box-shadow: 0 0 20px #00ffee;">
-  <img src="R/your-image.jpg" alt="Rishabh" style="width: 100%; height: auto; border-radius: 12px;">
+  <img src="R/your-image.jpg" alt="⚠︎" style="width: 100%; height: auto; border-radius: 12px;">
   <p style="text-align: center; color: #00ffee; margin-top: 10px;">Rishabh The Riper</p>
 </div>
   
