--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
     <p class="typewriter">|| Futur AI Developer Let's move ||</p>
   </header>
 
-<div style="max-width: 500px; margin: auto; padding: 10px; background-color: #111; border-radius: 16px; box-shadow: 0 0 20px #00ffee;">
-  <img src="image.jpg" alt="Rishabh" style="width: 100%; height: auto; border-radius: 12px;">
-  <p style="text-align: center; color: #00ffee; margin-top: 10px;">Rishabh – The Riper</p>
+<div style="max-width: 500px; margin: auto; padding: 10px; background-color: #111; border-radius: 16px; box-shadow: 0 0 20px #00ffee; text-align: center;">
+  <img src="image.jpg" alt="Rishabh" style="width: 100%; max-width: 300px; height: auto; border-radius: 12px; box-shadow: 0 0 12px #00ffee;">
+  <p style="color: #00ffee; margin-top: 10px;">Rishabh – The Riper</p>
 </div>
 
   <section id="about">
