--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
     <p class="typewriter">|| Futur AI Developer Let's move ||</p>
   </header>
 
-<div style="max-width: 220px; margin: 25px auto; padding: 8px; background-color: #111; border-radius: 14px; box-shadow: 0 0 14px #00ffee; text-align: center;">
-  <img src="image.jpg" alt="Rishabh" style="width: 100%; border-radius: 10px; box-shadow: 0 0 8px #00ffee;">
-  <p style="color: #00ffee; margin-top: 6px; font-size: 14px;">Rishabh – The Riper</p>
+<div style="max-width: 160px; margin: 20px auto; padding: 6px; background-color: #111; border-radius: 12px; box-shadow: 0 0 10px #00ffee; text-align: center;">
+  <img src="R/image.jpg" alt="Rishabh" style="width: 100%; border-radius: 8px; box-shadow: 0 0 6px #00ffee;">
+  <p style="color: #00ffee; margin-top: 5px; font-size: 12px;">Rishabh – The Riper</p>
 </div>
 
   <section id="about">
