--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
     <h1>Rishabh Kumar Yadav</h1>
     <p class="typewriter">|| Futur AI Developer Let's move ||</p>
   </header>
-
-<div style="max-width: 110px; margin: 15px auto; padding: 4px; background-color: #111; border-radius: 10px; box-shadow: 0 0 8px #00ffee; text-align: center;">
-  <img src="R/image.jpg" alt="Rishabh" style="width: 100%; border-radius: 6px; box-shadow: 0 0 4px #00ffee;">
-  <p style="color: #00ffee; margin-top: 4px; font-size: 10px;">Rishabh – The Riper</p>
+<div style="max-width: 80px; margin: 10px auto; padding: 2px; background-color: #111; border-radius: 8px; box-shadow: 0 0 6px #00ffee; text-align: center;">
+  <img src="R/image.jpg" alt="Rishabh" style="width: 100%; border-radius: 4px; box-shadow: 0 0 3px #00ffee;">
+  <p style="color: #00ffee; margin-top: 2px; font-size: 8px;">Rishabh</p>
 </div>
+
 
   <section id="about">
     <h2>About Me</h2>
