--- a/index.html
+++ b/index.html
@@ -171,9 +171,10 @@
     <h1>Rishabh Kumar Yadav</h1>
     <p class="typewriter">|| Futur AI Developer Let's move ||</p>
   </header>
-<div style="max-width: 80px; margin: 10px auto; padding: 2px; background-color: #111; border-radius: 8px; box-shadow: 0 0 6px #00ffee; text-align: center;">
-  <img src="R/image.jpg" alt="Rishabh" style="width: 100%; border-radius: 4px; box-shadow: 0 0 3px #00ffee;">
-  <p style="color: #00ffee; margin-top: 2px; font-size: 8px;">Rishabh</p>
+
+<div style="max-width: 350px; margin: 30px auto; padding: 10px; background-color: #111; border-radius: 16px; box-shadow: 0 0 20px #00ffee; text-align: center;">
+  <img src="image.jpg" alt="Rishabh" style="width: 100%; border-radius: 12px; box-shadow: 0 0 12px #00ffee;">
+  <p style="color: #00ffee; margin-top: 10px; font-size: 18px;">Rishabh – The Riper</p>
 </div>
 
 
