--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       font-size: 3.2em;
       color: #00ff88;
       text-shadow: 0 0 10px #00ff88;
+      animation: glow 2s ease-in-out infinite alternate;
     }
 
     .typewriter {
@@ -172,7 +173,7 @@
     <p class="typewriter">|| Futur AI Developer Let's move ||</p>
   </header>
 
-<div style="max-width: 280px; margin: 30px auto; padding: 10px; background-color: #111; border-radius: 16px; box-shadow: 0 0 18px #00ffee; text-align: center;">
+<div style="max-width: 330px; margin: 30px auto; padding: 10px; background-color: #111; border-radius: 16px; box-shadow: 0 0 18px #00ffee; text-align: center;">
   <img src="image.jpg" alt="Rishabh" style="width: 100%; border-radius: 12px; box-shadow: 0 0 10px #00ffee;">
   <p style="color: #00ffee; margin-top: 8px; font-size: 16px;">Rishabh – The Riper</p>
 </div>
