--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
     @keyframes blink {
       50% { border-color: transparent; }
     }
+    
+    @keyframes glow {
+  from { text-shadow: 0 0 10px #00ff88; }
+  to { text-shadow: 0 0 20px #00ffaa, 0 0 30px #00ffaa; }
+    }
 
     nav {
       background: #111;
