--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       border-bottom: 3px solid #00ff88;
     }
 
-    header h1 {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 3.2em;
-      color: #00ff88;
-      text-shadow: 0 0 10px #00ff88;
-      animation: glow 2s ease-in-out infinite alternate;
-    }
+header h1 {
+  font-family: 'Orbitron', sans-serif;
+  font-size: 3.2em;
+  color: #00ff88;
+  text-shadow: 0 0 10px #00ff88;
+  animation: glow 2s ease-in-out infinite alternate;
+}
 
     .typewriter {
       font-size: 1.2em;
@@ -52,8 +52,8 @@
     @keyframes glow {
   from { text-shadow: 0 0 10px #00ff88; }
   to { text-shadow: 0 0 20px #00ffaa, 0 0 30px #00ffaa; }
-    }
-
+}
+ 
     nav {
       background: #111;
       display: flex;
@@ -141,7 +141,8 @@
       nav { flex-direction: column; }
       nav a { margin: 10px 0; }
     }
-    .code-container {
+    
+.code-container {
   position: relative;
   background-color: #1e1e1e;
   border-radius: 8px;
@@ -167,6 +168,7 @@
 .copy-button:active {
   background: #00ccaa;
 }
+   
 
 
   </style>
@@ -176,13 +178,10 @@
   <header>
     <h1>Rishabh Kumar Yadav</h1>
     <p class="typewriter">|| Futur AI Developer Let's move ||</p>
-  </header>
-
-<div style="max-width: 330px; margin: 30px auto; padding: 10px; background-color: #111; border-radius: 16px; box-shadow: 0 0 18px #00ffee; text-align: center;">
-  <img src="image.jpg" alt="Rishabh" style="width: 100%; border-radius: 12px; box-shadow: 0 0 10px #00ffee;">
-  <p style="color: #00ffee; margin-top: 8px; font-size: 16px;">Rishabh – The Riper</p>
-</div>
-
+  </header> <div style="max-width: 350px; margin: 30px auto; padding: 10px; background-color: #111; border-radius: 16px; box-shadow: 0 0 18px #00ffee; text-align: center;">
+    <img src="image.jpg" alt="Rishabh" style="width: 100%; border-radius: 12px; box-shadow: 0 0 10px #00ffee;">
+    <p style="color: #00ffee; margin-top: 8px; font-size: 16px;">Rishabh – The Riper</p>
+  </div>
 
   <section id="about">
     <h2>About Me</h2>
