--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ a {
 
   <header>
     <h1>Rishabh Kumar Yadav</h1>
-    <p class="typewriter">|| Future AI Developer| Let's move ||</p>
+    <p class="typewriter">||Future AI Developer|| Let's move ||</p>
   </header> <div style="max-width: 280px; margin: 30px auto; padding: 10px; background-color: #111; border-radius: 16px; box-shadow: 0 0 18px #00ffee; text-align: center;">
     <img src="image.jpg" alt="Rishabh" style="width: 100%; border-radius: 12px; box-shadow: 0 0 10px #00ffee;">
     <p style="color: #00ffee; margin-top: 8px; font-size: 16px;">Rishabh – The Riper</p>
@@ -223,7 +223,7 @@ a {
       </div>
     </div>
   </section<section id="script">
-  <h2>Termux Theme Script</h2>
+  <h2>Terminal Theme Script</h2>
   <div class="code-container">
     <button class="copy-button" onclick="copyCode()">Copy</button>
     <pre id="termux-script">#!/bin/bash
