--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ esac</pre>
   </section>
 
   <footer>
-    &copy; 2025 Rishabh | Built with Code & Passion
+    &copy; 2025 Rishabh | Built with Code & 🩷
   </footer>
   <script>
 function copyCode() {
