--- a/index.html
+++ b/index.html
@@ -202,6 +202,70 @@ a {
 .number  { color: #b5cea8; }
 .built-in { color: #4fc1ff; }
 
+.hacker-footer {
+  position: relative;
+  background: #010101;
+  color: #00ffe5;
+  padding: 50px 20px;
+  font-family: 'Orbitron', monospace;
+  overflow: hidden;
+  text-align: center;
+  z-index: 1;
+  border-top: 1px solid #00ffe566;
+  box-shadow: 0 -2px 40px rgba(0, 255, 229, 0.2);
+}
+
+.matrix-bg {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: repeating-linear-gradient(90deg, rgba(0, 255, 229, 0.02) 0px, transparent 1px),
+                    repeating-linear-gradient(0deg, rgba(0, 255, 229, 0.02) 0px, transparent 1px);
+  animation: flicker 1.5s infinite;
+  z-index: 0;
+}
+
+@keyframes flicker {
+  0%, 100% { opacity: 0.9; }
+  50% { opacity: 0.4; }
+}
+
+.hacker-link {
+  position: relative;
+  z-index: 1;
+  display: inline-block;
+  color: #00ffe5;
+  text-decoration: none;
+  font-size: 24px;
+  border: 2px solid #00ffe5;
+  padding: 12px 30px;
+  border-radius: 12px;
+  box-shadow: 0 0 20px #00ffe5, 0 0 40px #00ffe5;
+  transition: 0.4s ease;
+  backdrop-filter: blur(4px);
+}
+
+.hacker-link:hover {
+  background: #00ffe5;
+  color: #000;
+  transform: scale(1.1);
+  box-shadow: 0 0 30px #00ffe5, 0 0 60px #00ffe5;
+}
+
+.hacker-link i {
+  margin-right: 10px;
+}
+
+.hacker-sign {
+  margin-top: 20px;
+  font-size: 14px;
+  color: #888;
+  position: relative;
+  z-index: 1;
+}
 
   </style>
 </head>
@@ -424,6 +488,13 @@ engine.setProperty(<span class="string">'rate'</span>, <span class="number">170<
     <h2>Contact Me</h2>
     <p>Email: <a href="mailto:rishabhaideveloper@gmail.com">rishabhaideveloper@gmail.com</a></p>
 </section>
+
+<footer class="hacker-footer">
+  <div class="matrix-bg"></div>
+  <a href="https://github.com/rishabhaideveloper" target="_blank" class="hacker-link">
+    <i class="fab fa-github"></i> GitHub
+  </a>
+</footer>
 
 <footer>
     &copy; 2025 Rishabh | Built with Code & 🩷
